template/trinity-large-preview:free-i_ir/row_149_update_2_template_20260329_034954.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'EFS Shared Storage with Cross-AZ EC2 Integration and Monitoring'

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  PublicSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true

  PublicSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true

  EFSFileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      Encrypted: true
      PerformanceMode: generalPurpose
      ThroughputMode: bursting

  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow EFS access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !Ref EC2SecurityGroup

  MountTargetAZ1:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref EFSFileSystem
      SubnetId: !Ref PublicSubnetAZ1
      SecurityGroups:
        - !Ref EFSSecurityGroup

  MountTargetAZ2:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref EFSFileSystem
      SubnetId: !Ref PublicSubnetAZ2
      SecurityGroups:
        - !Ref EFSSecurityGroup

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole

  EC2InstanceAZ1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0123456789abcdef0
      InstanceType: t3.medium
      IamInstanceProfile: !Ref EC2InstanceProfile
      SubnetId: !Ref PublicSubnetAZ1
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y amazon-efs-utils
          mkdir -p /home/efs
          mount -t efs -o tls,iam !Ref EFSFileSystem:/ /home/efs
          echo "!Ref EFSFileSystem:/ /home/efs efs _netdev,tls,iam 0 0" >> /etc/fstab

  EC2InstanceAZ2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0123456789abcdef0
      InstanceType: t3.medium
      IamInstanceProfile: !Ref EC2InstanceProfile
      SubnetId: !Ref PublicSubnetAZ2
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y amazon-efs-utils
          mkdir -p /home/efs
          mount -t efs -o tls,iam !Ref EFSFileSystem:/ /home/efs
          echo "!Ref EFSFileSystem:/ /home/efs efs _netdev,tls,iam 0 0" >> /etc/fstab

  SNSAlarmTopic:
    Type: AWS::SNS::Topic
    Properties:
      DisplayName: EFS-Alarms

  EFSAlarm1:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: EFS-Storage-Consumed
      Namespace: AWS/EFS
      MetricName: StorageBytes
      Statistic: Average
      Period: 300
      EvaluationPeriods: 1
      Threshold: 1073741824
      ComparisonOperator: GreaterThanThreshold
      AlarmActions:
        - !Ref SNSAlarmTopic

  EFSAlarm2:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: EFS-PercentIOLimit
      Namespace: AWS/EFS
      MetricName: PercentIOLimit
      Statistic: Average
      Period: 300
      EvaluationPeriods: 1
      Threshold: 80
      ComparisonOperator: GreaterThanThreshold
      AlarmActions:
        - !Ref SNSAlarmTopic

Outputs:
  EC2InstanceAZ1PublicIP:
    Description: Public IP of EC2 Instance in AZ1
    Value: !GetAtt EC2InstanceAZ1.PublicIp
  EC2InstanceAZ2PublicIP:
    Description: Public IP of EC2 Instance in AZ2
    Value: !GetAtt EC2InstanceAZ2.PublicIp
  EFSFileSystemId:
    Description: EFS File System ID
    Value: !Ref EFSFileSystem
